	(twittering-http-get-list-index-sentinel): Likewise.

	* twittering-mode.el (twittering-http-status-line-regexp): New
	defconst to share this between several functions. The regexp
	pattern to obey to RFC 2616.
	(twittering-http-get-default-sentinel): Use it.
	(twittering-http-post-default-sentinel): Likewise.
	(twittering-http-get-list-index-sentinel): Likewise.

2010-01-18  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-ucs-to-char): Add a workaround
	with navi2ch prior to 1.8.3, which is currently last release
	version as of 2010-01-18. The problem is fixed in navi2ch dated
	2010-01-16 or later, but not released yet.

2010-01-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-status): fix the regexp
	for the specifier "%FILL{...}" to accept pairs of braces inside of
	"{...}".

	* twittering-mode.el (twittering-format-status): add new format
	decorator "%FACE[face-name]{...}", which decorates braced strings
	with the specified face.

	* twittering-mode.el (twittering-render-timeline): support
	additional rendering.
	(twittering-http-get-default-sentinel): send the additional
	argument `same-timeline' to `twittering-render-timeline'.
	(twittering-status-id<): add new function for comparing two ids.
	(twittering-status-id=): likewise.

2010-01-16  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-get-response-header): Delete an
	adjusting code bacause `with-current-buffer' that can accept both
	a buffer and a buffer name.
	(twittering-get-response-body): Likewise.

2010-01-16  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-status): fix incorrect
	destructive modification of the replacement table for the
	specifier "%FILL{...}".

2010-01-16  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-edit-setup-help): use 0-witdh
	overlay to display help.
	(twittering-edit-mode, twittering-edit-post-status): do not use